--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
-    "@oclif/plugin-help": "^3.2.1"
+    "@oclif/plugin-help": "^3.2.1",
+    "js-yaml": "^3.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
