--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.1",
-    "js-yaml": "^3.14.1"
+    "js-yaml": "^3.14.1",
+    "prompt": "^1.1.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
