--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.1",
+    "chalk": "^4.1.0",
+    "figlet": "^1.5.0",
     "js-yaml": "^3.14.1",
     "prompt": "^1.1.0"
   },
