--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "oclif",
   "rules": {
     "semi": [2, "always"],
-    "no-console": "off"
+    "no-console": "off",
+    "camelcase": [2, {"properties": "never"}]
   }
 }
