--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@oclif/plugin-help": "^3.2.1",
     "chalk": "^4.1.0",
     "figlet": "^1.5.0",
-    "js-yaml": "^3.14.1",
-    "prompt": "^1.1.0"
+    "inquirer": "^6.5.2",
+    "js-yaml": "^3.14.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.26.0",
@@ -23,7 +23,7 @@
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1.0",
     "globby": "^10.0.2",
-    "mocha": "^5.2.0",
+    "mocha": "^8.3.2",
     "nyc": "^14.1.1"
   },
   "engines": {
